design tweaks: improve mobile layout, fixed the testimonial cards not being in the center, fixed some text box overflowing in mobile version, fixed footer overflow-y, fixed section sizes in mobile version

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,13 @@
   font-size: 12px;
 }
 
+@media only screen and (max-width: 600px) {
+  .footer {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
 .footer p {
   color: #847979;
 }
