--- a/src/app/homePage/home/home.component.scss
+++ b/src/app/homePage/home/home.component.scss
@@ -30,6 +30,14 @@
  transition: all .2s ease;
 }
 
+@media only screen and (max-width: 600px) {
+  #carousel-next, #carousel-prev {
+    height: 5rem;
+    width: 2rem;
+    font-size: 36px;
+  }
+}
+
 #carousel-prev {
   clip-path: polygon(0 0, 70% 10%, 70% 90%, 0 100%);
 }
@@ -231,8 +239,8 @@
 #title {
   padding-left: 2rem;
   background-color: #F0F0F4;
-  height: 170px;
   padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 #featureSection i {
@@ -244,6 +252,13 @@
   margin-top: 8rem;
   margin-left: 3rem;
 }
+
+@media only screen and (max-width: 600px) {
+  #cardContainer {
+    margin: 2rem;
+  }
+}
+
 
 
 /* call to action section =============================================================>*/
@@ -281,6 +296,18 @@
   color: white;
   font-size: 28px;
 }
+
+@media only screen and (max-width: 600px) {
+  #callToActionSection .subheading {
+    font-size: 16px;
+    width: auto;
+  }
+  #callToActionSection .subheading span {
+    font-size: 20px;
+  }
+}
+
+
 
 /* history section =================================================================> */
 
@@ -337,7 +364,7 @@
   width: 300px;
   height: 500px;
   margin-top: 10.25rem;
-  margin-bottom: -2rem;
+  margin-bottom: -1rem;
   opacity: 0;
   transition: transform 5s .1s,
                opacity .3s .25s ease-out;
@@ -368,6 +395,18 @@
 
 @media only screen and (max-width: 600px) {
 
+  #historySection {
+    height: auto;
+  }
+
+  #historySection .textContainer {
+    padding: 0;
+  }
+
+  #historySection .textBox {
+   width: auto;
+  }
+
   #historySection .darkButton {
     width: 100%;
   }
@@ -379,6 +418,10 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+  }
+
+  #historySection .heading {
+    font-size: 28px;
   }
 
   #historySection .pictureDisplay{
@@ -399,20 +442,31 @@
 
 /* testimonial section ========================================================> */
 
-#testimonialSection .sectionContainer {
-  min-height: 0px;
-  max-height: 65vh;
+#testimonialSection {
+  min-height: 0;
 }
+
 
 #testimonialSection .bigLabel {
   margin-top: 4rem;
-  padding-left: 4rem;
 }
 
 
 #testimonialSection {
   // background-color: #F0F0F4;
   background: linear-gradient(180.87deg, #232A30 1.43%, #453050 98.78%);
+}
+
+@media only screen and (max-width: 600px) {
+
+  #testimonialSection {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  #testimonialSection .bigLabel {
+    margin: 0;
+  }
 }
 
 // form section ================================================================>
@@ -429,6 +483,12 @@
   overflow-y: scroll;
 }
 
+@media only screen and (max-width: 600px) {
+  #quoteFormSection {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 
 /* our partner section =========================================================>*/
 
