--- a/src/app/homePage/quote-form/quote-form.component.scss
+++ b/src/app/homePage/quote-form/quote-form.component.scss
@@ -68,3 +68,9 @@ select option {
 	position:relative;
 	top:1px;
 }
+
+@media only screen and (max-width: 600px) {
+  .card {
+    padding: 2rem;
+  }
+}
