--- a/src/app/homePage/testimonial/testimonial.component.scss
+++ b/src/app/homePage/testimonial/testimonial.component.scss
@@ -1,19 +1,21 @@
 .carousel {
   cursor: pointer;
   display: flex;
-  height: 25rem;
+  flex-direction: column;
 }
 
+.carousel-item {
+  width: 20rem;
+}
 
 .carousel .card {
   text-align: center;
   display: flex;
   max-height: 15rem;
-  width: 20rem;
   flex-direction: column;
-  border-top-color: #232330;
+  border-top-color: #8F8FF9;
   border-top-style: solid;
-  border-top-width: 3px;
+  border-top-width: 4px;
   background-color: white;
   color: #232330;
 }
@@ -28,12 +30,14 @@
 
 
 .personImage {
-  width: 8rem;
+  width: 7rem;
   height: 8rem;
   border-radius: 50%;
   margin-top: -5rem;
   text-align: center;
   align-self: center;
+  background-size: cover;
+  background-position: center;
 }
 
 .card-content p {
@@ -42,4 +46,20 @@
 
 .card #personName {
   color: #A7A7BE;
+}
+
+@media only screen and (max-width: 600px) {
+
+
+  .personImage {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    margin-top: -4rem;
+    text-align: center;
+    align-self: center;
+  }
+  .carousel-item {
+    width: 15rem;
+  }
 }
